--- a/.glzr/zebar/starter/styles.css
+++ b/.glzr/zebar/starter/styles.css
@@ -61,15 +61,15 @@ body,
   margin-right: 20px;
   vertical-align: middle;
 }
-
+i
 .aduio {
   align-items: center;
 }
 .media {
-  margin-left: 200px;
+  margin-left: 150px;
 }
 .time {
-  margin-left: 580px;
+  margin-left: 550px;
   color: #fff3d9;
 }
 
